Fixed home page image header overflow of overlay by correcting image default display:inline to display:block

--- a/public_html/css/header.css
+++ b/public_html/css/header.css
@@ -50,6 +50,7 @@ header figure {
 }
 header img{
     width: 100%;
+    display: block;
 }
 header button{
     text-transform: uppercase;
